deployments/k8s/dapr/dapr-naas-admin-token-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naas-admin-token-server
  namespace: nilorg
spec:
  selector:
    matchLabels:
      app: naas-admin
      service: naas-admin-token-server
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: naas-admin
        service: naas-admin-token-server
        version: v1
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "naas-admin-token-server"
        dapr.io/app-protocol: "http"
        dapr.io/app-port: "8081"
    spec:
      restartPolicy: Always
      containers:
        - name: naas-admin-token-server
          image: nilorg/naas-token-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
