deployments/k8s/dapr/dapr-pod-grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naas-grpc
  namespace: nilorg
spec:
  selector:
    matchLabels:
      app: naas
      service: naas-grpc
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: naas
        service: naas-grpc
        version: v1
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "naas-grpc"
        dapr.io/app-protocol: "grpc"
        dapr.io/app-port: "9000"
    spec:
      restartPolicy: Always
      containers:
        - name: naas-grpc
          image: nilorg/naas:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: config-cm
              mountPath: /workspace/configs/
      volumes:
        - name: config-cm
          configMap:
            name: naas
