deployments/k8s/dapr/dapr-pod-http-grpcgateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naas-grpcgateway
  namespace: nilorg
spec:
  selector:
    matchLabels:
      app: naas
      service: naas-grpcgateway
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: naas
        service: naas-grpcgateway
        version: v1
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "naas-grpcgateway"
        dapr.io/app-protocol: "http"
        dapr.io/app-port: "5000"
    spec:
      restartPolicy: Always
      containers:
        - name: naas-grpcgateway
          image: nilorg/naas:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config-cm
              mountPath: /workspace/configs/
      volumes:
        - name: config-cm
          configMap:
            name: naas
